<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CoordinateLayout_Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.locatemybus.myorderbox.Activities.HomePage">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homepage_background">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar_menu_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/yellow_round"
            android:fontFamily="@font/edittext"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/HP_StoreIsClosed"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/itemname"
            android:text="@string/HP_StartYourOrder"
            android:textAlignment="center"
            android:textColor="@color/Button_Font"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_HomeDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorBlack"
                    android:fontFamily="@font/edittext"
                    android:selectAllOnFocus="true"
                    android:text="@string/HP_Delivery"
                    android:textAlignment="center"
                    android:textColor="@color/Button_Font"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_HomeCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorBlack"
                    android:fontFamily="@font/edittext"
                    android:text="@string/HP_Collection"
                    android:textAlignment="center"
                    android:textColor="@color/Button_Font"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/button_HomeDineIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorBlack"
                    android:fontFamily="@font/edittext"
                    android:text="@string/HP_DineIn"
                    android:textAlignment="center"
                    android:textColor="@color/Button_Font"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_HP_Location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_HP_Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/fontColor"
                    app:srcCompat="@drawable/locationarrow" />

                <EditText
                    android:id="@+id/editText_PostalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/fontColor"
                    android:ems="10"
                    android:fontFamily="@font/edittext"
                    android:hint="@string/HP_PostCode"
                    android:inputType="textCapWords|textCapCharacters"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textAllCaps="true" />

                <ImageView
                    android:id="@+id/imageView_HP_Cross"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/fontColor"
                    app:srcCompat="@drawable/locationcross" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_HP_Order"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorBlack"
            android:fontFamily="@font/button"
            android:text="@string/HP_Order"
            android:textColor="@color/Button_Font"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>




