<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.locatemybus.myorderbox.Activities.UserRegistration"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/imageView_UR_Logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/company_logo"
            tools:srcCompat="@drawable/company_logo" />

        <EditText
            android:id="@+id/editText_SU_Email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:fontFamily="@font/edittext"
            android:hint="@string/UR_Email"
            android:inputType="textPersonName"
            android:textColor="@color/fontColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_UR_Logo" />

        <EditText
            android:id="@+id/editText_SU_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:fontFamily="@font/edittext"
            android:hint="@string/UR_Password"

            android:inputType="textPersonName"
            android:textColor="@color/fontColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_SU_Email" />

        <EditText
            android:id="@+id/editText_SU_FName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:fontFamily="@font/edittext"
            android:hint="@string/UR_FirstName"
            android:inputType="textPersonName"

            android:textColor="@color/fontColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_SU_Password" />

        <EditText
            android:id="@+id/editText_SU_LName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:fontFamily="@font/edittext"
            android:hint="@string/UR_LastName"
            android:inputType="textPersonName"

            android:textColor="@color/fontColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_SU_FName" />

        <EditText
            android:id="@+id/editText_SU_MobileNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:fontFamily="@font/edittext"
            android:hint="@string/UR_MobileNo"
            android:inputType="textPersonName"

            android:textColor="@color/fontColor"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_SU_LName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/edittext"
            android:text="@string/UR_DriverInstructions"
            android:textColor="@color/hintColor"

            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_SU_MobileNo" />

        <CheckBox
            android:id="@+id/checkBox_SU_TermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:backgroundTint="@color/Button_Font"
            android:buttonTint="@color/Button_BG"
            android:fontFamily="@font/edittext"
            android:text="@string/UR_TermsAndConditions"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_PostalCode" />

        <Button
            android:id="@+id/button_Register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="60dp"
            android:background="@color/Button_BG"
            android:fontFamily="@font/button"
            android:text="@string/UR_Button"

            android:textColor="@color/Button_Font"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox_SU_TermsConditions" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/price"
            android:text="Copyright 2019 crust. All rights reserved."
            android:textColor="#ffffff"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_Register"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editText_PostalCode"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/price"
            android:textSize="16dp"
            android:text="This is just a testing text you can enter whatever you want to"
            android:singleLine="false"
            android:gravity="start"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />



    </android.support.constraint.ConstraintLayout>

</ScrollView>

